--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     content="Time to test Yor Skills! Prime Time is a game based on your knowledge about prime numbers. Let's see how much you know about prime numbers.">
   <meta name="description"
     content="Its Prime Time! | It is a game based on your knowledge about prime numbers. Let's see how much you know about prime numbers.">
-  <link rel="shortcut icon" href="./assets/itsprimetime.png" type="image/x-icon">
-  <link rel="apple-touch-icon" href="./assets/itsprimetime.png">
+  <link rel="shortcut icon" href="http://arnav-kr.github.io/primetime/assets/itsprimetime.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="http://arnav-kr.github.io/primetime/assets/itsprimetime.png">
   <meta name="keywords"
     content="prime numbers, prime time, its prime time, arnav kumar, arnav-kr, game, web, js, html, css, maths, memory, maths game, logical game, web games, sololearn, best results, most, best, opensource">
   <link rel="manifest" href="manifest.webmanifest">
