--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="canonical" href="https://arnav-kr.github.io/primetime/" />
   <script type="module"
     src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
   <title>Its Prime Time!</title>
