--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
   <link rel="canonical" href="https://arnav-kr.github.io/primetime/" />
   <script type="module"
     src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3ZKE110LW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-Z3ZKE110LW');
+  </script>
   <title>Its Prime Time!</title>
 </head>
 
